[gd_scene load_steps=2 format=2]

[ext_resource path="res://mm/mm_panel.gd" type="Script" id=1]

[node name="MmPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = 3.0
margin_bottom = 2.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -595.0
margin_top = -500.0
margin_right = -8.0
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PoseRLbl" type="Label" parent="Panel"]
margin_left = 14.0
margin_top = 25.0
margin_right = 64.0
margin_bottom = 39.0
text = "pose_r:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PoseR" type="Label" parent="Panel"]
margin_left = 70.0
margin_top = 27.0
margin_right = 230.0
margin_bottom = 41.0
text = "(0, 0, 0)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PoseDRLbl" type="Label" parent="Panel"]
margin_left = 14.8574
margin_top = 45.577
margin_right = 64.8574
margin_bottom = 59.577
text = "pose_dr:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PoseDR" type="Label" parent="Panel"]
margin_left = 70.8574
margin_top = 47.577
margin_right = 230.857
margin_bottom = 61.577
text = "(0, 0, 0)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PoseQLbl" type="Label" parent="Panel"]
margin_left = 9.5705
margin_top = 108.588
margin_right = 62.5705
margin_bottom = 122.588
text = "pose_q: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PoseQ" type="Label" parent="Panel"]
margin_left = 68.7131
margin_top = 110.118
margin_right = 228.714
margin_bottom = 124.118
text = "(0, 0, 0, 0)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CamQLbl" type="Label" parent="Panel"]
margin_left = 9.5705
margin_top = 88.0114
margin_right = 62.5705
margin_bottom = 102.011
text = "cam_q: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CamQ" type="Label" parent="Panel"]
margin_left = 68.7131
margin_top = 89.5412
margin_right = 228.714
margin_bottom = 103.541
text = "(0, 0, 0, 0)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CamRelQLbl" type="Label" parent="Panel"]
margin_left = 8.71313
margin_top = 161.746
margin_right = 61.7131
margin_bottom = 175.746
text = "cam_rel_q: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CamRelQ" type="Label" parent="Panel"]
margin_left = 91.0049
margin_top = 164.133
margin_right = 251.005
margin_bottom = 178.133
text = "(0, 0, 0, 0)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PoseDQLbl" type="Label" parent="Panel"]
margin_left = 9.5705
margin_top = 129.165
margin_right = 70.5705
margin_bottom = 143.165
text = "pose_dq: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PoseDQ" type="Label" parent="Panel"]
margin_left = 69.5705
margin_top = 130.695
margin_right = 229.57
margin_bottom = 144.695
text = "(0, 0, 0, 0)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrameNLb" type="Label" parent="Panel"]
margin_left = 6.85563
margin_top = 193.892
margin_right = 64.8556
margin_bottom = 207.892
text = "Frame #"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrameN" type="Label" parent="Panel"]
margin_left = 68.9983
margin_top = 193.034
margin_right = 201.998
margin_bottom = 207.034
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstantCtrlLbl" type="Label" parent="Panel"]
margin_left = 6.85565
margin_top = 215.326
margin_right = 80.8557
margin_bottom = 229.326
text = "Instant ctrl:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstantCtrl" type="Label" parent="Panel"]
margin_left = 89.5753
margin_top = 216.184
margin_right = 222.575
margin_bottom = 230.184
text = "(0, 0)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CtrlSeqLbl" type="Label" parent="Panel"]
margin_left = 5.99823
margin_top = 235.903
margin_right = 79.9982
margin_bottom = 249.903
text = "Ctrl seq:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CtrlSeqLbl2" type="Label" parent="Panel"]
margin_left = 14.572
margin_top = 369.654
margin_right = 88.572
margin_bottom = 383.654
text = "traj pos:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CtrlSeqLbl4" type="Label" parent="Panel"]
margin_left = 10.2852
margin_top = 312.21
margin_right = 84.2852
margin_bottom = 326.21
text = "Pose vel:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CtrlSeqLbl7" type="Label" parent="Panel"]
margin_left = 10.2852
margin_top = 283.916
margin_right = 84.2852
margin_bottom = 297.916
text = "Descriptor weights"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CtrlSeqLbl3" type="Label" parent="Panel"]
margin_left = 13.7147
margin_top = 398.804
margin_right = 87.7147
margin_bottom = 412.804
text = "traj az:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CtrlSeqLbl5" type="Label" parent="Panel"]
margin_left = 14.572
margin_top = 426.24
margin_right = 88.572
margin_bottom = 440.24
text = "traj g:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CtrlSeqLbl8" type="Label" parent="Panel"]
margin_left = 14.572
margin_top = 468.252
margin_right = 88.572
margin_bottom = 482.252
text = "Switch th:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CtrlSeqLbl6" type="Label" parent="Panel"]
margin_left = 12.8572
margin_top = 338.788
margin_right = 86.8572
margin_bottom = 352.788
text = "Pose g:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CtrlSeq" type="Label" parent="Panel"]
margin_left = 88.7179
margin_top = 236.761
margin_right = 221.718
margin_bottom = 250.761
text = "(0, 0)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeightTrajPos" type="LineEdit" parent="Panel"]
margin_left = 104.6
margin_top = 366.099
margin_right = 162.6
margin_bottom = 390.099
text = "1.0"

[node name="WeightPoseVel" type="LineEdit" parent="Panel"]
margin_left = 104.172
margin_top = 307.798
margin_right = 162.172
margin_bottom = 331.798
text = "1.0"

[node name="WeightTrajAz" type="LineEdit" parent="Panel"]
margin_left = 104.6
margin_top = 395.25
margin_right = 162.6
margin_bottom = 419.25
text = "1.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeightTrajG" type="LineEdit" parent="Panel"]
margin_left = 104.6
margin_top = 423.544
margin_right = 162.6
margin_bottom = 447.544
text = "1.0"

[node name="SwitchTh" type="LineEdit" parent="Panel"]
margin_left = 105.457
margin_top = 464.698
margin_right = 163.457
margin_bottom = 488.698
text = "0.3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeightPoseG" type="LineEdit" parent="Panel"]
margin_left = 103.742
margin_top = 336.091
margin_right = 161.742
margin_bottom = 360.091
text = "1.0"

[node name="ApplyBtn" type="Button" parent="Panel"]
margin_left = 178.0
margin_top = 385.0
margin_right = 348.0
margin_bottom = 435.0
text = "Apply descriptor weights"
[connection signal="pressed" from="Panel/ApplyBtn" to="." method="_on_apply_weights_pressed"]
